--- a/packages/reaction-ui/client/components/select/select.html
+++ b/packages/reaction-ui/client/components/select/select.html
@@ -20,7 +20,7 @@
           {{> Template.dynamic template=optionTemplate data=(templateData option)}}
           <input
             type="radio"
-            name="navbarBrand"
+            name={{name}}
             value={{option._id}}
             {{checked option}}
             class={{inputClassName}}
@@ -36,7 +36,7 @@
     {{#each option in options}}
       <div class="rui item">
         <label>
-          <input type="checkbox" name="navbarBrand" value={{option._id}} {{checked option}}>
+          <input type="checkbox" name="{{name}}" value={{option._id}} {{checked option}}>
           {{> Template.dynamic template=optionTemplate data=option}}
         </label>
       </div>
