fix auto form styles with hack
template attributes are not being passed through Autoform in some
cases. adding `class='form-control’`  resolves.

--- a/packages/reaction-core-theme/default/base.less
+++ b/packages/reaction-core-theme/default/base.less
@@ -71,7 +71,15 @@ h3 {
   font-weight: @headings-font-weight-h3;
 }
 
-
+/* Filthy hack for Griddle Tables
+*/
+.griddle-body table{
+  margin-bottom: 0px;
+}
+.griddle-container {
+  margin-bottom: 20px;
+  text-transform: capitalize;
+}
 
 /* Badge Colors
 // Contextual variations of badges
